# claude-test

./: .env.example  .gitignore  README.md  pyproject.toml
mobile/: app.json  package-lock.json  package.json
mobile/app/: _layout.tsx
mobile/app/(tabs)/: _layout.tsx  index.tsx
mobile/app/novel/[novelId]/: [chapterId].tsx  _layout.tsx  index.tsx
mobile/components/: ChapterListItem.tsx  MangaReader.tsx  NovelCard.tsx  ReadingProgress.tsx
mobile/hooks/: useManifest.ts  useReadingProgress.ts
mobile/lib/: constants.ts  types.ts
scripts/: generate_manifest.py
src/novelmanga/: __init__.py  __main__.py  analyzer.py  composer.py  generator.py  models.py  parser.py
tests/: test_analyzer.py  test_composer.py  test_generator.py  test_parser.py
